package java2021.world;

import java.util.*;

public class OldManAI extends PlayerAI {

    public OldManAI(Creature creature, World world) {
        super(creature, world);
    }

    @Override
    public void run() {

    }
}